--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "name": "contactmanager-react",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
+  "scripts": {
+    "start": "craco start",
+    "build": "craco build",
+    "serve" : "serve -s build",
+    "test": "craco test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -17,11 +25,10 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "@craco/craco": "^7.1.0",
+    "@craco/types": "^7.1.0",
+    "tailwindcss": "^3.4.10"
   },
   "eslintConfig": {
     "extends": [
@@ -40,8 +47,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "tailwindcss": "^3.4.10"
   }
 }
