Add possibility to add env var on docker run/docker-compose or just in .env.production

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "contactmanager-react",
+  "name": "contact-manager_react",
   "version": "0.1.0",
   "type": "module",
   "private": true,
